song title and time elaspsed added to my music app

--- a/songify-master/Javascript Class 4/index.html
+++ b/songify-master/Javascript Class 4/index.html
@@ -58,43 +58,90 @@
     <script src="jquery.js">
     </script>
     <script>
-    $('.welcome-screen button').on('click', function() {
+	function fancyTimeFormat(time)
+{   
+    // Hours, minutes and seconds
+    var hrs = ~~(time / 3600);
+    var mins = ~~((time % 3600) / 60);
+    var secs = time % 60;
+    // Output like "1:01" or "4:03:59" or "123:03:59"
+    var ret = "";
+    if (hrs > 0) {
+        ret += "" + hrs + ":" + (mins < 10 ? "0" : "");
+    }
+    ret += "" + mins + ":" + (secs < 10 ? "0" : "");
+    ret += "" + secs;
+    return ret;
+}
+	
+	
+	function toggleSong() {
+	var song = document.querySelector('audio');
+	if(song.paused == true) {
+	console.log('Playing');
+	$('.play-icon').removeClass('fa-play').addClass('fa-pause');
+	song.play();
+	}
+	else {
+	console.log('Pausing');
+	$('.play-icon').removeClass('fa-pause').addClass('fa-play');
+	song.pause();
+	}
+	} 
+	
+	
+	
+	
+	
+		
+    function updateCurrentTime() {
+    var song = document.querySelector('audio');
+    var currentTime = Math.floor(song.currentTime);
+    currentTime = fancyTimeFormat(currentTime);
+    var duration = Math.floor(song.duration);
+    duration = fancyTimeFormat(duration)
+    $('.time-elapsed').text(currentTime);
+    $('.song-duration').text(duration);
+}
+	   var songName = 'Tamma Song';
+		window.onload = function() {
+		$('.song-name').text(songName);
+		updateCurrentTime(); 
+		setInterval(function() {
+		updateCurrentTime();
+		},1000);
+		}
+	
+	
+		
+	  $('.welcome-screen button').on('click', function() {
         var name = $('#name-input').val();
         if (name.length > 2) {
             var message = "Welcome, " + name;
             $('.main .user-name').text(message);
             $('.welcome-screen').addClass('hidden');
             $('.main').removeClass('hidden');
-        } else {
+        }
+		else {
             $('#name-input').addClass('error');
         }
-    });
-    $('.play-icon').on('click', function() {
-        var song = document.querySelector('audio');
-        if (song.paused == true) {
-            console.log('Playing');
-            $('.play-icon').removeClass('fa-play').addClass('fa-pause');
-            song.play();
-        } else {
-            console.log('Pausing');
-            $('.play-icon').removeClass('fa-pause').addClass('fa-play');
-            song.pause();
-        }
-    });
-    $('body').on('keypress', function(event) {
-                if (event.keyCode == 32) {
-                    var song = document.querySelector('audio');
-                    if (song.paused == true) {
-                        console.log('Playing');
-                        $('.play-icon').removeClass('fa-play').addClass('fa-pause');
-                        song.play();
-                    } else {
-                        console.log('Pausing');
-                        $('.play-icon').removeClass('fa-pause').addClass('fa-play');
-                        song.pause();
-                    }
-                }
-            });
+        });	
+	
+			
+		$('.play-icon').on('click', function() {
+toggleSong();
+});
+$('body').on('keypress',function(event) {
+if (event.keyCode == 32)
+{
+toggleSong();
+}
+}); 
+		
+	
+
+
+
     </script>
 </body>
 
