--- a/songify-master/Javascript Class 4/index.html
+++ b/songify-master/Javascript Class 4/index.html
@@ -5,60 +5,100 @@
     <meta charset="UTF-8">
     <title> Song App</title>
     <link rel="stylesheet" type="text/css" href="font-awesome.css">
+	 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+	
 </head>
 
 <body>
     <div class="wrapper">
-        <section class="welcome-screen hidden">
-            <h1> Welcome to Songify </h1>
-            <h3> Enter name to access your account </h3>
+        <section class="welcome-screen">
+            <h1 class="name"> Welcome to  Music app</h1>
+            <h3 class="name"> Enter name to access your account </h3>
             <div class="input-wrapper">
-                <input type="text" placeholder="Name" id="name-input">
-                <button> Go </button>
+                <input type="text" placeholder="Name" id="name-input" class="box">
+                <button class="button"> Go </button>
             </div>
         </section>
-        <div class="main">
+        <div class="main hidden">
             <header>
                 <div class="right floated user-name"> </div>
             </header>
             <section class="content">
-                <audio src="song.mp3"></audio>
-                <div class="list-headers">
-        <div> Title </div> 
-        <div> Artist </div>
-        <div> Album </div>
-        <div> Duration </div>
-        </div>
-        <div class="song-list">
-         <div class="song" id="song1">
-        <span class="song-name"></span>
-       <!----- <span class="song-artist"></span>
-        <span class="song-album"></span>
-        <span class="song-length"></span>/------->
-        </div>
-		<div class="song" id="song2">
-      <span  class="song-name"> </span>
-        </div>
-      <div class="song" id="song3">
-     <span  class="song-name"> </span>
-     </div>
-      <div class="song" id="song4">
-    <span  class="song-name"> </span>
-      </div>
-        </div>
+                <audio src="song1.mp3"></audio>
+				<table id="songs" class="music" >
+    <thead class="list-headers">
+            <tr><td> Title </td>
+            <td> Artist </td>
+            <td> Album </td>
+            <td> Duration </td>
+        </tr></thead>
+        <!-- <div class="song-list"> -->
+            <tbody><tr class="song" id="song1">
+                <td class="song-name"></td>
+                <td class="song-artist"></td>
+                <td class="song-album"></td>
+                <td class="song-length"></td>
+            </tr>
+            <tr class="song" id="song2">
+                <td class="song-name"></td>
+                <td class="song-artist"></td>
+                <td class="song-album"></td>
+                <td class="song-length"></td>
+            </tr>
+            <tr class="song" id="song3">
+                <td class="song-name"></td>
+                <td class="song-artist"></td>
+                <td class="song-album"></td>
+                <td class="song-length"></td>
+            </tr>
+            <tr class="song" id="song4">
+                <td class="song-name"></td>
+                <td class="song-artist"></td>
+                <td class="song-album"></td>
+                <td class="song-length"></td>
+            </tr>
+			  <tr class="song" id="song5">
+                <td class="song-name"></td>
+                <td class="song-artist"></td>
+                <td class="song-album"></td>
+                <td class="song-length"></td>
+            </tr>
+        <!-- </div> -->
+    </tbody></table>
+        
             </section>
+			<div class="current-song-wrapper">
+        <img class="current-song-image">
+        <div>
+        <p class="current-song-name"></p>
+        <p class="current-song-album"></p>
+        </div>
+        </div>
+			
+			
+			
+			
             <footer>
                 <div class="controls">
-                    <div class="player-buttons">
-                        <i class="fa fa-play clickable play-icon" aria-hidden="true"></i>
-                    </div>
+                     <div class="player-buttons">
+					  <i class="fa fa-random clickable disabled" aria-hidden="true"></i>
+					  <i class="fa fa-step-backward clickable" aria-hidden="true"></i>
+					  <i class="fa fa-play clickable play-icon" aria-hidden="true"></i>
+					  <i class="fa fa-step-forward clickable" aria-hidden="true"></i>
+					  <i class="fa fa-repeat disabled clickable" aria-hidden="true"></i>
+					  <i class="fa fa-microphone" aria-hidden="true"></i>
+					    <i class="fa fa-mute" aria-hidden="true"></i>
+					</div>
                     <div class="progress-wrapper">
                         <span class="time-elapsed"> </span>
                         <div class="player-progress">
                             <div class="progress-filled"> </div>
                         </div>
                         <span class="song-duration"></span>
+						<i class="fa fa-volume-up volumeicon" aria-hidden="true"></i>
+						 <input id="slider" type="range" min="0" max="100" value="100" step="4">
                     </div>
                 </div>
             </footer>
@@ -66,101 +106,13 @@
     </div>
     <script src="jquery.js">
     </script>
-    <script>
-	function fancyTimeFormat(time)
-{   
-    // Hours, minutes and seconds
-    var hrs = ~~(time / 3600);
-    var mins = ~~((time % 3600) / 60);
-    var secs = time % 60;
-    // Output like "1:01" or "4:03:59" or "123:03:59"
-    var ret = "";
-    if (hrs > 0) {
-        ret += "" + hrs + ":" + (mins < 10 ? "0" : "");
-    }
-    ret += "" + mins + ":" + (secs < 10 ? "0" : "");
-    ret += "" + secs;
-    return ret;
-}
-	
-	
-	function toggleSong() {
-	var song = document.querySelector('audio');
-	if(song.paused == true) {
-	console.log('Playing');
-	$('.play-icon').removeClass('fa-play').addClass('fa-pause');
-	song.play();
-	}
-	else {
-	console.log('Pausing');
-	$('.play-icon').removeClass('fa-pause').addClass('fa-play');
-	song.pause();
-	}
-	} 
-	
-	
-	
-	
-	
-		
-    function updateCurrentTime() {
-    var song = document.querySelector('audio');
-    var currentTime = Math.floor(song.currentTime);
-    currentTime = fancyTimeFormat(currentTime);
-    var duration = Math.floor(song.duration);
-    duration = fancyTimeFormat(duration)
-    $('.time-elapsed').text(currentTime);
-    $('.song-duration').text(duration);
-}
-	 //  var songName1 = 'Tamma Song';
-	   //var songName2 = 'Humma Song';
-      // var songName3 = 'Nashe Si Chadh Gayi';
-       //var songName4 = 'The Breakup Song'
-	   var songList = ['Badri Ki Dulhania (Title Track)', 'Humma Song', 'Nashe Si Chadh Gayi', 'The Breakup Song'];
-
-       window.onload = function() {
-       $('#song1 .song-name').text(songList[0]);
-       $('#song2 .song-name').text(songList[1]);
-       $('#song3 .song-name').text(songList[2]);
-       $('#song4 .song-name').text(songList[3]);
-
-		
-		updateCurrentTime(); 
-		setInterval(function() {
-		updateCurrentTime();
-		},1000);
-		}
-	
-	
-		
-	  $('.welcome-screen button').on('click', function() {
-        var name = $('#name-input').val();
-        if (name.length > 2) {
-            var message = "Welcome, " + name;
-            $('.main .user-name').text(message);
-            $('.welcome-screen').addClass('hidden');
-            $('.main').removeClass('hidden');
-        }
-		else {
-            $('#name-input').addClass('error');
-        }
-        });	
-	
-			
-		$('.play-icon').on('click', function() {
-toggleSong();
-});
-$('body').on('keypress',function(event) {
-if (event.keyCode == 32)
-{
-toggleSong();
-}
-}); 
-		
-	
-
-
-
+	 <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js">
+    </script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js">
+    </script>
+    <script src="main.js">
+    </script>
+	<script src="voice.js">
     </script>
 </body>
 
